plenty of changes on security config implemented alongside refactoring