@@ -1,26 +1,39 @@
 package com.kalu.fitnessapp.service;
 
+import com.kalu.fitnessapp.AppCustomException;
+import com.kalu.fitnessapp.UserDeletedEvent;
 import com.kalu.fitnessapp.entity.User;
 import com.kalu.fitnessapp.repository.UserRepository;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.core.GrantedAuthority;
+import lombok.AllArgsConstructor;
+import org.springframework.context.ApplicationEventPublisher;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Collection;
+import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
+@AllArgsConstructor
 public class UserService implements UserDetailsService {
 
-    @Autowired
-    private UserRepository userRepository;
+    private final UserRepository userRepository;
+    private final PasswordEncoder passwordEncoder;
+    private final ApplicationEventPublisher eventPublisher;
 
-    public User registerUser(User user){
+    public User registerUser(User user) {
+
+        if (userRepository.existsByUsername(user.getUsername())) {
+            throw new AppCustomException("User already exist with username specified");
+        }
+
+        user.setPassword(passwordEncoder.encode(user.getPassword())); //Encode and store pass
         return userRepository.save(user);
     }
 
@@ -34,22 +47,23 @@ public class UserService implements UserDetailsService {
         return userRepository.save(user);
     }
 
-    // Delete a user by ID
-    public String deleteUser(Long id) {
-        userRepository.deleteById(id);
-        return "User is removed: "+id;
+    // Delete a user by ID - this will also initiate an event to delete the user's goal and wellbeing logs in a single transaction
+    @Transactional //This is an atomic operation
+    public String deleteUser(User userToDelete) {
+        eventPublisher.publishEvent(new UserDeletedEvent(userToDelete)); //Goals will be deleted, WellBeing will be deleted
+        userRepository.delete(userToDelete); //After the deletion of Goals and WellbeingLogs, then user will be deleted
+        return "User is removed: " + userToDelete.getId();
     }
 
     //Load user by username for authentication
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        User user = findByUsername(username)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found"));
+
+        User user = findByUsername(username).orElseThrow(() -> new UsernameNotFoundException("User not found"));
 
         // Map roles to GrantedAuthority
-        Collection<GrantedAuthority> authorities = user.getRoles().stream()
-                .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-                .collect(Collectors.toList());
+        List<SimpleGrantedAuthority> authorities = user.getRoles().stream()
+                .map(role -> new SimpleGrantedAuthority(role.name())).toList();
 
         // Return UserDetails object
         return new org.springframework.security.core.userdetails.User(
@@ -58,4 +72,13 @@ public class UserService implements UserDetailsService {
                 authorities
         );
     }
+
+    public Page<User> fetchAllUsers(Pageable page) {
+        return userRepository.findAll(page);
+    }
+
+    public User findUserById(Long userId) {
+        return userRepository.findById(userId).orElseThrow(() -> new RuntimeException("User not found"));
+    }
+
 }
